--- a/E-Commerce-Front-End/E-Commerce-App/src/app/navbar/navbar.component.scss
+++ b/E-Commerce-Front-End/E-Commerce-App/src/app/navbar/navbar.component.scss
@@ -1,3 +1,4 @@
+
 img{
   width: 25px;
   height: 25px;;
@@ -14,4 +15,10 @@ img{
   margin-top: 50px;
   margin-bottom: 30px;
   width: 100%;
+}
+
+
+
+#addProductM{
+  overflow: auto;
 }
