product details show

--- a/E-Commerce-Front-End/E-Commerce-App/src/app/home/home.component.html
+++ b/E-Commerce-Front-End/E-Commerce-App/src/app/home/home.component.html
@@ -125,14 +125,14 @@
                 </a>
                 <h5>
                   <strong>
-                    <a href="" class="dark-grey-text">{{p.name}}
+                    <a href="JavaScript:Void(0);" (click)="sendId(p.id)" class="dark-grey-text">{{p.name}}
                       <span class="badge badge-pill danger-color">NEW</span>
                     </a>
                   </strong>
                 </h5>
 
                 <h4 class="font-weight-bold blue-text">
-                  <strong>{{p.price}} Tk.</strong>
+                  <strong>{{p.soldPrice}} Tk.</strong>
                 </h4>
 
               </div>
