--- a/E-Commerce-Front-End/E-Commerce-App/src/app/navbar/navbar.component.html
+++ b/E-Commerce-Front-End/E-Commerce-App/src/app/navbar/navbar.component.html
@@ -233,16 +233,18 @@
     
     
     
+              <div class="md-form mb-5">
+                <input type="text" id="marketPrice" class="form-control validate" [(ngModel)]="product.marketPrice" required>
+                <label data-error="wrong" data-success="right" for="marketPrice">Market price of product</label>
+              </div>
+
     
             <div class="md-form mb-5">
-              <input type="text" id="price" class="form-control validate" [(ngModel)]="product.price" required>
-              <label data-error="wrong" data-success="right" for="price">Price of product</label>
+              <input type="text" id="soldPrice" class="form-control validate" [(ngModel)]="product.soldPrice" required>
+              <label data-error="wrong" data-success="right" for="soldPrice">Sold price of product</label>
             </div>
     
-            <div class="md-form mb-5">
-                <input type="text" id="discount" class="form-control validate" [(ngModel)]="product.discount" required>
-                <label data-error="wrong" data-success="right" for="discount">Discount of product</label>
-              </div>
+           
     
               <div class="md-form mb-5">
                   <input type="text" id="color" class="form-control validate" [(ngModel)]="product.color" required>
@@ -282,7 +284,7 @@
       </div>
       <div class="modal-footer d-flex justify-content-center">
         <button type="button" mdbBtn color="primary" class="waves-light" [disabled]="!(product.name && product.brand && product.description &&
-        product.price && product.color && product.quantity && product.selectedPFile &&
+        product.soldPrice && product.marketPrice && product.color && product.quantity && product.selectedPFile &&
         product.category)" (click)="uploadFile()" aria-label="Close" (click)="addProductModal.hide()" mdbWavesEffect>Save</button>
       </div>
     </div>
